# mirror

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  check-env.py  docker-compose-dev.yaml  docker-compose-prod.yaml
archive/: README.md
archive/mirror-website-nuxt/: app.vue  package.json
configs/: README.md  mirror-map-env.json.example  mirrorlog.conf.json.example  prometheus.yml.example  sync-scheduler-env.json.example  torrent-handler-env.json.example
data/: README.md
docs/: structure.md
logs/: README.md
mirror-api/: Dockerfile  README.md  pom.xml
mirror-api/configs/: README.md  mirrors.json
mirror-api/docs/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  (+1 more)
mirror-map/: .gitignore  Dockerfile  pom.xml
mirror-metrics/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
mirror-metrics/configs/: README.md  prometheus.yml
mirror-metrics/src/: main.cpp
mirror-metrics/src/event/: event.cpp  event.hpp  timestamp.cpp  timestamp.hpp
mirror-metrics/src/state/: state.cpp  state.hpp
mirror-sync-scheduler/: CMakeLists.txt  Dockerfile  TODO.md
mirror-torrent-handler/: Dockerfile  pom.xml
mirror-website/: Dockerfile  Makefile  manage.py  proxy.Dockerfile  requirements.txt
mirror-website-nuxt/: Dockerfile  error.vue  nuxt.config.ts  package-lock.json
mirror_website/: Dockerfile
mirrorlog/: Dockerfile  README.md  pom.xml
scripts/: README.md
(+121 files in other folders)
